--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,7 +13,7 @@
     box-sizing: border-box;
 }
 
-body, main {
+body {
     background-color:  #0455BF;
     height: 100vh;
     width: 100vw;
@@ -37,6 +37,9 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.603);
+
+    transition: width .5s, height .5s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
