--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -10,9 +10,10 @@
 
     section#login {
         width: 80vw;
+        height: 300px;
     }
 
-    section#login >  div#imagem {
+    section#login > div#imagem {
         float: left;
         width: 30%;
         height: 100%;
@@ -34,6 +35,7 @@
 
     section#login {
         width: 950px;
+        height: 400px;
     }
 
     section#login > div#imagem {
@@ -52,6 +54,7 @@
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
