--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,7 +13,7 @@
     box-sizing: border-box;
 }
 
-body {
+body, html {
     background-color:  #0455BF;
     height: 100vh;
     width: 100vw;
@@ -29,15 +29,15 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
-
+    
     background-color: white;
     width: 250px;
     height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.603);
-
+    
+    transform: translate(-50%, -50%);
     transition: width .5s, height .5s;
     transition-timing-function: ease;
 }
@@ -66,6 +66,7 @@ div#formulario > p {
 
 form > div.campo {
     background-color: #7217E0;
+    border: 2px solid #7217E0;
     display: block;
     width: 100%;
     height: 40px;
@@ -79,7 +80,7 @@ div.campo > label {
 
 div.campo > span {
     color: white;
-    font-size: 2em;
+    font-size: 1.9em;
     width: 40px;
     padding: 5px;
 }
@@ -89,10 +90,14 @@ div.campo > input {
     font-size: 1em;
     width: calc(100% - 44px);
     height: 100%;
-    transform: translateY(-10px)
+    transform: translateY(-13px);
     border: 0px;
     border-radius: 8px;
     padding: 4px;
+}
+
+div.campo > input:focus-within {
+    background-color: white;
 }
 
 form > input[type=submit] {
@@ -117,7 +122,7 @@ form > a.botao {
     font-size: 1em;
     width: 100%;
     height: 40px;
-    padding-top: 7px;
+    padding-top: 5px;
     margin-top: 5px;
     background-color: white;
     color: #0455BF;
