--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,16 +1,22 @@
 @charset "UTF-8";
 
-/* Tablet 768px até 992px*/
+/* Typical Device Breakpoints
+------------------------------
+Pequenas telas: até 600px
+Celular: de 600px até 768px
+Tablet: 768px até 992px
+Desktop: 992px até 1200px
+Grandes telas: acima de 1200px
+*/
 
-@media screen and (min-width: 768px) and (max-width: 992px) {
-
+@media screen and (min-width: 768px) and (max-width: 992px) { /* CONFIGURAÇÃO PARA TABLET */
     body {
-        background-image: linear-gradient(to top, #7217E0, #0455BF);
+        background-image: linear-gradient(to top, #5f2c82, #0477BF);
     }
 
     section#login {
         width: 80vw;
-        height: 300px;
+        height: 280px;
     }
 
     section#login > div#imagem {
@@ -25,17 +31,14 @@
     }
 }
 
-/* Desktop e Telas Grandes */
-
-@media screen and (min-width: 992px) {
-
+@media screen and (min-width: 992px) { /* CONFIGURAÇÕES PARA DESKTOP */
     body {
-        background-image: linear-gradient(to top, #0455BF, #7217E0);
+        background-image: linear-gradient(to top, #5f2c82, #0477BF);
     }
 
     section#login {
         width: 950px;
-        height: 400px;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -44,7 +47,7 @@
         height: 100%;
     }
 
-    section#login > div#formulário {
+    section#login > div#formulario {
         float: left;
         width: 50%;
     }
