--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,20 +1,20 @@
 @charset "UTF-8";
 
-/*Paleta de cores
-    Azul: #0455BF
-    Roxo: #7217E0
-
+/*
+    Paleta de cores
+    Azul: #0477BF
+    Lilás: #5f2c82
 */
 
-*{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+* {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
 }
 
 body, html {
-    background-color:  #0455BF;
+    background-color: #0477BF;
     height: 100vh;
     width: 100vw;
 }
@@ -30,23 +30,23 @@ section#login {
     top: 50%;
     left: 50%;
     overflow: hidden;
-    
+
     background-color: white;
     width: 250px;
     height: 515px;
     border-radius: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.603);
-    
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+
     transform: translate(-50%, -50%);
-    transition: width .5s, height .5s;
+    transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
 
 section#login > div#imagem {
     display: block;
-    background: #0455BF url(../imagens/pintura-azul.jpg) no-repeat;
-    background-position: left bottom;
+    background: #5f2c82 url(../imagens/pintura-azul.jpg) no-repeat;
     background-size: cover;
+    background-position: left bottom;
     height: 200px;
 }
 
@@ -65,8 +65,8 @@ div#formulario > p {
 }
 
 form > div.campo {
-    background-color: #7217E0;
-    border: 2px solid #7217E0;
+    background-color: #0477BF;
+    border: 2px solid #0477BF;
     display: block;
     width: 100%;
     height: 40px;
@@ -78,26 +78,28 @@ div.campo > label {
     display: none;
 }
 
-div.campo > span {
+div.campo > i {
     color: white;
+    /*background-color: black;*/
     font-size: 1.9em;
     width: 40px;
     padding: 5px;
 }
 
 div.campo > input {
-    background-color: #67a7fa;
+    background-color: #a8c8e6;
     font-size: 1em;
-    width: calc(100% - 44px);
+    width: calc(100% - 45px);
     height: 100%;
-    transform: translateY(-13px);
     border: 0px;
     border-radius: 8px;
     padding: 4px;
+    transform: translateY(-10px);
 }
 
 div.campo > input:focus-within {
     background-color: white;
+    border: none;
 }
 
 form > input[type=submit] {
@@ -105,7 +107,7 @@ form > input[type=submit] {
     font-size: 1em;
     width: 100%;
     height: 40px;
-    background-color: #388eff;
+    background-color: #5eafa4;
     color: white;
     border: none;
     border-radius: 5px;
@@ -113,7 +115,7 @@ form > input[type=submit] {
 }
 
 form > input[type=submit]:hover {
-    background-color: #0455BF;
+    background-color: #2d6462;
 }
 
 form > a.botao {
@@ -125,14 +127,14 @@ form > a.botao {
     padding-top: 5px;
     margin-top: 5px;
     background-color: white;
-    color: #0455BF;
-    border: #388eff solid 1px;
-    border-radius: 5px;
+    color: #2d6462;
+    border: 1px solid #49a08a;
+    border-radius: 7px;
     text-decoration: none;
 }
 
 form > a.botao:hover {
-    background-color: #84b8fc;
+    background-color: #6cd3b9;
 }
 
 form > a.botao > i {
