--- a/estilos/style.css
+++ b/estilos/style.css
@@ -65,8 +65,8 @@ div#formulario > p {
 }
 
 form > div.campo {
-    background-color: #0477BF;
-    border: 2px solid #0477BF;
+    background-color: #5f2c82;
+    border: 2px solid #8a43b9;
     display: block;
     width: 100%;
     height: 40px;
@@ -89,12 +89,12 @@ div.campo > i {
 div.campo > input {
     background-color: #a8c8e6;
     font-size: 1em;
-    width: calc(100% - 45px);
+    width: calc(100% - 44px);
     height: 100%;
     border: 0px;
     border-radius: 8px;
     padding: 4px;
-    transform: translateY(-10px);
+    transform: translateY(-11px);
 }
 
 div.campo > input:focus-within {
